# phishguard-py

./: .coverage  README.md  detect_nulls.py  output.json  pyproject.toml  requirements-dev.txt  sample.csv
.github/workflows/: ci.yml
phishguard/: __init__.py  cli.py
phishguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
phishguard/commands/: csv_to_json.py  handle_regex_grep  http_get.py  json_pretty.py  regex_grep.py
tests/: test_cli.py  test_csv_to_json.py  test_csv_to_json_success  test_http_get.py  test_json_pretty.py  test_regex_grep.py
