[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard"
version = "0.1.0"
description = "Security tools and CLI for PhishGuard"
authors = [{ name = "MoHay" }]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "bandit",
    "pip-audit",
]

[project.scripts]
ops-toolkit = "phishguard.cli:main"
